# folderize

./: CHANGELOG.md  README.md  STRUCTURE.yaml  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: pr-validation.yml  python-publish.yml
src/folderize/: __init__.py  core.py  exceptions.py
test/: test_core.py
