[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folderize"
version = "0.1.0"
description = "Automate repetitive folder and file creation"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Sanjay RB", email = "sanjaybabu618@gmail.com" }
]

dependencies = []

[project.scripts]
folderize = "folderize.core:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
